<resources>
    <string name="app_name">König der Schlücke</string>
    <string name="statistik_oeffnen">Statistik öffnen</string>
    <string name="einstellungen_oeffnen">Einstellungen öffnen</string>
    <string name="ueberschrift_koenig_der_schluecke">Überschrift: König der Schlücke</string>
    <string name="koenig_der_schluecke">König der Schlücke</string>
    <string name="neues_spiel_button">Neues Spiel</string>
    <string name="beenden_button">Beenden</string>
    <string name="spiel_beitreten_button">Spiel beitreten</string>
    <string name="scanne_hier_den_qr_code">Scanne hier den QR-Code:</string>
    <string name="zurueck_zum_hauptmenue">Zurück zum Hauptmenü</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ein_bild_von_einem_bier">Ein Bild von einem Bier</string>
    <string name="zurueck_zum_hauptmen">Zurück zum Hauptmenü</string>
    <string name="feedbackSenden">Senden</string>
    <string name="trage_hier_dein_feedback_ein">Trage hier dein Feedback ein:</string>
    <string name="feedback_senden_button_ueberschrift">Feedback senden</string>
    <string name="description_button_zum_senden_des_feedbacks">Button zum Senden des Feedbacks</string>
    <string name="aktuelle_spieler_in">aktuelle Spieler*in</string>
    <string name="bereits_gezogene_koenige">Bereits gezogene Könige:</string>
    <string name="nummer_welche_die_gezogenen_koenige_darstellt">Nummer, welche die gezogenen Könige darstellt</string>
    <string name="gerade_am_zug">Gerade am Zug:</string>
    <string name="karte_ziehen">Karte ziehen</string>
    <string name="gezogene_karte">Gezogene Karte:</string>
    <string name="karten_in_diesem_spiel_gezogen">Karten in diesem Spiel gezogen.</string>
    <string name="anzahl">Anzahl</string>
    <string name="insgesamt_wurden">Insgesamt wurden</string>
    <string name="hat_den_vierten_k_nig_gezogen_und_musste_das_glas_austrinken_prost">hat den vierten König gezogen und musste das Glas austrinken. Prost!</string>
    <string name="name">Name</string>
    <string name="beendetes_spiel">beendetes Spiel!</string>
    <string name="anzahlBeendeteSpiele">Anzahl</string>
    <string name="dies_war_dein">Dies war dein</string>
    <string name="spiel_beendet">Spiel beendet!</string>
    <string name="statistik_l_schen">Statistik löschen</string>
    <string name="anzahlgesamtkarten">AnzahlGesamtKarten</string>
    <string name="insgesamt_wurden_so_viele_karten_in_allen_spielen_gezogen">Insgesamt wurden so viele Karten in allen Spielen gezogen:</string>
    <string name="anzahlgesamtspiele">AnzahlGesamtSpiele</string>
    <string name="insgesamt_gespiele_spiele">Insgesamt gespiele Spiele:</string>
    <string name="statistik">Statistik</string>
    <string name="singleplayer_auswahl">Singleplayer</string>
    <string name="multiplayer_auswahl">Multiplayer</string>
    <string name="lobby_name_eingeben">Name eingeben</string>
    <string name="spiel_beitreten">SPIEL BEITRETEN</string>
    <string name="spiel_erstellen">SPIEL ERSTELLEN</string>
    <string name="dein_name">Dein Name</string>
    <string name="starte_bluetooth">Starte Bluetooth</string>
    <string name="spiel_starten">Spiel starten</string>
    <string name="eigene_regeln">EIGENE REGELN</string>
</resources>