<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/feedbackUeberschrift"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="45dp"
        android:contentDescription="@string/ueberschrift_koenig_der_schluecke"
        android:fontFamily="sans-serif-black"
        android:text="@string/koenig_der_schluecke"
        android:textAlignment="center"

        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonZurueckZumHauptmenueFeedbackSeite"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/zurueck_zum_hauptmen"
        android:text="@string/zurueck_zum_hauptmenue"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/grau_button_hintergrund"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFeedbackAbsenden"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonFeedbackAbsenden"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:text="@string/feedbackSenden"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/grau_button_hintergrund"
        app:layout_constraintBottom_toTopOf="@+id/buttonZurueckZumHauptmenueFeedbackSeite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackInputFeld" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedbackInputFeld"
        android:layout_width="293dp"
        android:layout_height="234dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonFeedbackAbsenden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackUeberschrift">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedbackInputText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/feedbackHinweis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="49dp"
        android:text="@string/trage_hier_dein_feedback_ein"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/feedbackInputFeld"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackUeberschrift" />


</androidx.constraintlayout.widget.ConstraintLayout>